package com.cristian.desarrollo.modelo;

public enum EstadoPedido {
    SIN_ENTREGAR, PENDIENTE_COBRAR;
}
